asterisk (1:1.2.15~dfsg-1) UNRELEASED; urgency=low

  * New upstream release.
  * ukcid.dpatch: adapted to chan_conf.
  * bristuff.dpatch: adapted to chan_conf.
  * daemon_color.dpatch: make rastrisk colourful even without safe_asterisk.
  * No need to edit a config file to start Asterisk.

 -- Tzafrir Cohen <tzafrir.cohen@xorcom.com>  Tue, 13 Feb 2007 18:54:26 +0200

asterisk (1:1.2.14~dfsg-5) UNRELEASED; urgency=low

  [ Tzafrir Cohen ]
  * Bristuff 0.3.0-PRE-1x

 -- Tzafrir Cohen <tzafrir.cohen@xorcom.com>  Mon, 22 Jan 2007 23:30:34 +0200

asterisk (1:1.2.14~dfsg-4) unstable; urgency=high

  * Add missing "fi" to asterisk_fix. (Closes: #406961)

 -- Kilian Krause <kilian@debian.org>  Mon, 15 Jan 2007 12:05:18 +0100

asterisk (1:1.2.14~dfsg-3) unstable; urgency=low

  * Write a more robust version of the FHS-update for
    /usr/share/asterisk/sounds/priv-callerintros.
  * Update 30_ast-data-dir to complete fix for #406714. Thanks to Lionel!

 -- Kilian Krause <kilian@debian.org>  Sun, 14 Jan 2007 13:38:57 +0100

asterisk (1:1.2.14~dfsg-2) unstable; urgency=low

  * Install private callerinfos in /var/lib/ where they belong acording to
    FHS. (Closes: #406714)

 -- Kilian Krause <kilian@debian.org>  Sat, 13 Jan 2007 12:01:33 +0100

asterisk (1:1.2.14~dfsg-1) unstable; urgency=low

  * New upstream release.
  * Build against libspeex-dev (>= 1.1.12-3) with updated shlibs
    (Closes: #403544)
  * Update bristuff patch to apply cleanly with 1.2.14 until new upstream
    version is out.
  * Remove hardcoded gcc (Closes: #316802)
  * Fix upstream clean target. (Closes: #393659)

 -- Kilian Krause <kilian@debian.org>  Wed,  3 Jan 2007 21:03:19 +0100

asterisk (1:1.2.13~dfsg-2) unstable; urgency=low

  [ Tzafrir Cohen ]
  * less_docs.dpatch: remove unnecessary doxygen docs. asterisk-doc's size
    is now 1.6M (7.7M installed).

  [ Mark Purcell ]
  * asterisk-classic, asterisk-bristuff:
    /usr/lib/asterisk/modules/format_ogg_vorbis.so gone missing when