@@ -1,8 +1,67 @@
-[global]
+[directories]
+; Make sure these directoriess have the right permissions if not
+; running Asterisk as root 
+
+; Where the configuration files (except for this one) are located
 astetcdir => /etc/asterisk
+
+; Where the Asterisk loadable modules are located
 astmoddir => /usr/lib/asterisk/modules
+
+; Where additional 'library' elements (scripts, etc.) are located
 astvarlibdir => /var/lib/asterisk
+
+; Where AGI scripts/programs are located
 astagidir => /usr/share/asterisk/agi-bin
+
+; Where spool directories are located
+; Voicemail, monitor, dictation and other apps will create files here
+; and outgoing call files (used with pbx_spool) must be placed here
 astspooldir => /var/spool/asterisk
+
+; Where the Asterisk process ID (pid) file should be created
 astrundir => /var/run/asterisk
+
+; Where the Asterisk log files should be created
 astlogdir => /var/log/asterisk
+
+
+[options]
+;Under "options" you can enter configuration options
+;that you also can set with command line options
+
+;verbose = 0					; Verbosity level for logging (-v)
+;debug = 3					; Debug: "No" or value (1-4)
+;nofork=yes | no      				; Background execution disabled (-f)
+;console= yes | no				; Console mode (-c)
+;highpriority = yes | no			; Execute with high priority (-p)
+;initcrypto = yes | no				; Initialize crypto at startup (-i)
+;nocolor = yes | no				; Disable ANSI colors (-n)
+;dumpcore = yes | no				; Dump core on failure (-g)
+;quiet = yes | no				; Run quietly (-q)
+;timestamp = yes | no				; Force timestamping on log entries to console (-T)
+runuser = asterisk				; User to run asterisk as (-U) NOTE: will require changes to
+						; directory and device permisions
+;rungroup = asterisk				; Group to run asterisk as (-G)
+
+;These options have no command line equivalent
+;cache_record_files = yes | no			; Cache record() files in another directory until completion
+;record_cache_dir = <dir>
+;transcode_via_sln = yes | no 			; Build transcode paths via SLINEAR
+;transmit_silence_during_record = yes | no	; send SLINEAR silence while channel is being recorded
+;maxload = 1.0					; The maximum load average we accept calls for
+;maxcalls = 255					; The maximum number of concurrent calls you want to allow 
+;execincludes = yes | no 			; Allow #exec entries in configuration files
+;dontwarn = yes | no				; Don't over-inform the Asterisk sysadm, he's a guru
+
+[files]
+; Changing the following lines may compromise your security
+; Asterisk.ctl is the pipe that is used to connect the remote CLI
+; (asterisk -r) to Asterisk. Changing these settings change the
+; permissions and ownership of this file. 
+; The file is created when Asterisk starts, in the "astrundir" above.
+
+astctlpermissions = 0660
+astctlowner = root
+astctlgroup = asterisk
+astctl = asterisk.ctl
