@@ -1,0 +1,69 @@
+.TH STEREORIZE 1 "FEB 21th, 2007" "stereorize" "Linux Administratos's Manual"
+.SH NAME
+.B stereorize
+-- convert two mono wav files to one stereo wav file.
+.SH SYNOPSIS
+.PP 
+.B stereorize 
+.I left.wav right.wav stereo.wav
+
+.SH DESCRIPTION
+.B stereorize
+is a command-line unility to merge to mono WAV files to one stereo file.
+
+.SH OPTIONS
+
+.I -h
+.RS
+create a WAV-header on output files.
+.RE
+
+.I -c#
+.RS
+set number of channels to # (1 or 2). Default: like input.
+.RE
+
+.I-w#
+.RS
+set number of bits per sample (width) to # (only 16)
+.RE
+
+.I -f#
+.RS
+set sample frequency to #. Default: like input.
+.RE
+
+.I -V
+.RS
+verbose: talk a lot.
+.RE
+
+.I -Q
+.RS
+quiet: talk as little as possible.
+.RE
+
+.I --help
+.RS
+Just print usage message and exit.
+.RE
+
+.SH NOTES
+TODO: Add a proper sox command-line to do the sma or better.
+
+.SH "SEE ALSO" 
+asterisk(8), sox(1)
+
+http://www.voip-info.org/wiki-Asterisk+astman
+
+.SH BUGS
+Report to http://bugs.digium.com/
+
+.SH "AUTHOR" 
+This manual page was written by Tzafrir Cohen <tzafrir.cohen@xorcom.com> 
+Permission is granted to copy, distribute and/or modify this document under 
+the terms of the GNU General Public License, Version 2 or any  
+later version published by the Free Software Foundation. 
+
+On Debian systems, the complete text of the GNU General Public 
+License can be found in /usr/share/common-licenses/GPL. 
